--- a/markdown.css
+++ b/markdown.css
@@ -6,6 +6,15 @@
   font-family: "Fira Code";
   font-size: 14px;
 }
+
+code {
+  font-family: "Fira Code", Menlo, Monaco, Consolas, "Droid Sans Mono", "Courier New", monospace, "Droid Sans Fallback";
+  font-feature-settings: "liga1" on;
+  /*font-variant-ligatures: normal;*/
+  font-size: 14px;
+  line-height: 19px;
+}
+
 /*
 .vscode-body {
   font-family: "Fira Code";
