--- a/markdown.css
+++ b/markdown.css
@@ -1,22 +1,25 @@
 .vscode-body pre code {
   font-family: "Fira Code";
+  font-feature-settings: "calt" 1;
 }
 
 .vscode-body code {
   font-family: "Fira Code";
+  font-feature-settings: "calt" 1;
+    
   font-size: 14px;
 }
 
 code {
   font-family: "Fira Code", Menlo, Monaco, Consolas, "Droid Sans Mono", "Courier New", monospace, "Droid Sans Fallback";
   font-feature-settings: "liga1" on;
+  font-feature-settings: "calt" 1;
   /*font-variant-ligatures: normal;*/
   font-size: 14px;
   line-height: 19px;
 }
 
-/*
-.vscode-body {
-  font-family: "Fira Code";
+.hljs {
+  background-color: rgba(247, 247, 247, 1);
+
 }
-*/
